# dlrs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
src/: board.rs  downloader.rs  main.rs  thread.rs
