[package]
name = "rusty-downloader"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.18"
regex = "1.5.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.18.5", features = ["full"] }
serde_json = "1.0"
futures = "0.3"
colored = "2.0.0"
